# llm_job_info_extraction_benchmark

./: .gitignore  README.md  example_usage.py  experiement_llm_extraction.ipynb  main.py  pyproject.toml  results_analysis.ipynb
data/: extraction_experiment_results.pkl  jobs_samples.csv
src/: __init__.py  evaluation.py  extraction.py  runner.py  schemas.py
